--- a/index.html
+++ b/index.html
@@ -1,30 +1,15 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Registro de Visitantes</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="https://unpkg.com/html5-qrcode"></script>
-</head>
-<body>
-  <h1>Registro de Visitantes</h1>
+<form id="registro-form">
+  <label>Nombre:</label>
+  <input type="text" id="nombre" required><br>
 
-  <div id="reader" style="width:300px;"></div>
-  <div id="result"></div>
+  <label>Apellido:</label>
+  <input type="text" id="apellido" required><br>
 
-  <form id="registro-form">
-    <label>Nombre:</label>
-    <input type="text" id="nombre"><br>
+  <label>Cédula:</label>
+  <input type="text" id="cedula" required><br>
 
-    <label>Cédula:</label>
-    <input type="text" id="cedula"><br>
+  <label>Motivo de visita:</label>
+  <input type="text" id="motivo" required><br>
 
-    <label>Motivo de visita:</label>
-    <input type="text" id="motivo"><br>
-
-    <button type="submit">Registrar</button>
-  </form>
-
-  <script src="script.js"></script>
-</body>
-</html>
+  <button type="submit">Registrar</button>
+</form>
