Actualización del código de conexión con Apps Script

--- a/index.html
+++ b/index.html
@@ -1,15 +1,29 @@
-<form id="registro-form">
-  <label>Nombre:</label>
-  <input type="text" id="nombre" required><br>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Registro de Visitantes</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Registro de Visitantes</h1>
 
-  <label>Apellido:</label>
-  <input type="text" id="apellido" required><br>
+  <form id="registro-form">
+    <label>Nombre:</label>
+    <input type="text" id="nombre" required><br>
 
-  <label>Cédula:</label>
-  <input type="text" id="cedula" required><br>
+    <label>Apellido:</label>
+    <input type="text" id="apellido" required><br>
 
-  <label>Motivo de visita:</label>
-  <input type="text" id="motivo" required><br>
+    <label>Cédula:</label>
+    <input type="text" id="cedula" required><br>
 
-  <button type="submit">Registrar</button>
-</form>
+    <label>Motivo de visita:</label>
+    <input type="text" id="motivo" required><br>
+
+    <button type="submit">Registrar</button>
+  </form>
+
+  <script src="script.js"></script>
+</body>
+</html>
