--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
   <h1>Registro de Visitantes</h1>
 
+  <div id="qr-reader" style="width: 300px;"></div>
+  <button onclick="startScanner()">Escanear Cédula</button>
+  
   <form id="registro-form">
     <label>Nombre:</label>
     <input type="text" id="nombre" required><br>
@@ -24,6 +27,9 @@
     <button type="submit">Registrar</button>
   </form>
 
+  <!-- Primero se carga la librería QR -->
+  <script src="https://unpkg.com/html5-qrcode"></script>
+  <!-- Luego se carga tu script personalizado -->
   <script src="script.js"></script>
 </body>
 </html>
