--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Registro de Visitantes</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="icon-192.png">
 </head>
 <body>
   <h1>Registro de Visitantes</h1>
@@ -27,9 +29,7 @@
     <button type="submit">Registrar</button>
   </form>
 
-  <!-- Primero se carga la librería QR -->
   <script src="https://unpkg.com/html5-qrcode"></script>
-  <!-- Luego se carga tu script personalizado -->
   <script src="script.js"></script>
 </body>
 </html>
