--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="style.css">
   <link rel="manifest" href="manifest.json">
   <link rel="icon" href="icon-192.png">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <audio id="scan-sound" src="beep.mp3" preload="auto"></audio>
+  
   <h1>Registro de Visitantes</h1>
 
   <div>
