--- a/index.html
+++ b/index.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Registro de Visitantes</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="manifest" href="manifest.json">
-  <link rel="icon" href="icon-192.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Registro de Visitantes - Oficina XYZ</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="icon-192.png">
 </head>
 <body>
-  <audio id="scan-sound" src="beep.mp3" preload="auto"></audio>
+    <audio id="scan-sound" src="beep.mp3" preload="auto"></audio>
+    <audio id="success-sound" src="success.mp3" preload="auto"></audio> <main class="container">
+        <h1>Registro de Visitantes</h1>
 
-  <h1>Registro de Visitantes</h1>
+        <div class="ocr-section">
+            <h3>Automatización (Opcional)</h3>
+            <div>
+                <label for="cedula-captura">1. Tomar foto de la cédula:</label>
+                <input type="file" id="cedula-captura" accept="image/*" capture="environment">
+                <button onclick="extraerTextoDesdeCaptura()">Procesar Foto</button>
+            </div>
+            <pre id="resultado"></pre>
+        </div>
+        
+        <form id="registro-form">
+            <h2>Datos del Visitante</h2>
+            
+            <div id="feedback-message" class="feedback" aria-live="polite"></div>
 
-  <div>
-    <label for="cedula-captura">Tomar foto de la cédula:</label>
-    <input type="file" id="cedula-captura" accept="image/*" capture="environment">
-    <button onclick="extraerTextoDesdeCaptura()">Procesar Foto</button>
-  </div>
+            <label for="nombre">Nombre:</label>
+            <input type="text" id="nombre" required>
 
-  <div>
-    <label for="cedula-img">O subir imagen desde galería:</label>
-    <input type="file" id="cedula-img" accept="image/*">
-    <button onclick="extraerTextoDesdeArchivo()">Procesar Imagen Subida</button>
-  </div>
+            <label for="apellido">Apellido:</label>
+            <input type="text" id="apellido" required>
 
-  <form id="registro-form">
-    <label>Nombre:</label>
-    <input type="text" id="nombre" required><br>
+            <label for="cedula">Cédula:</label>
+            <input type="text" id="cedula" placeholder="Ej: 8-123-456" required>
 
-    <label>Apellido:</label>
-    <input type="text" id="apellido" required><br>
+            <label for="motivo">Motivo de visita:</label>
+            <input type="text" id="motivo" required>
 
-    <label>Cédula:</label>
-    <input type="text" id="cedula" required><br>
+            <button type="submit" id="submit-btn">Registrar</button>
+        </form>
+    </main>
 
-    <label>Motivo de visita:</label>
-    <input type="text" id="motivo" required><br>
-
-    <button type="submit">Registrar</button>
-  </form>
-
-  <h3>Texto detectado por OCR:</h3>
-  <pre id="resultado" style="white-space: pre-wrap; background: #f9f9f9; padding: 10px; border: 1px solid #ccc;"></pre>
-
-  <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
-  <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
