Actualización del código de conexión con Apps Script

--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Visitantes - Oficina XYZ</title>
+    <title>Registro de Visitantes - Oficina</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
+    <button id="theme-toggle" class="theme-btn">🌙</button>
+
     <audio id="scan-sound" src="beep.mp3" preload="auto"></audio>
-    <audio id="success-sound" src="success.mp3" preload="auto"></audio> <main class="container">
+    <audio id="success-sound" src="success.mp3" preload="auto"></audio>
+
+    <main class="container">
         <h1>Registro de Visitantes</h1>
 
         <div class="ocr-section">
