Actualización del código de conexión con Apps Script

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <pre id="resultado"></pre>
             </div>
             
-            <form id="registro-form">
+            <form id="registro-form" novalidate>
                 <h2>Datos del Visitante</h2>
 
                 <label for="nombre">Nombre:</label>
