Actualización del código de conexión con Apps Script

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
     <main class="container">
         <h1>Registro de Visitantes</h1>
 
+        <div id="ultimo-visitante-card" class="card-ultimo-visitante" style="display: none;">
+            <h4>Último Visitante Registrado</h4>
+            <p><strong>Nombre:</strong> <span id="ultimo-nombre"></span></p>
+            <p><strong>Cédula:</strong> <span id="ultimo-cedula"></span></p>
+            <p><strong>Hora:</strong> <span id="ultimo-hora"></span></p>
+        </div>
+
         <div class="layout-wrapper">
         
             <div class="ocr-section">
