Actualización del código de conexión con Apps Script

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button id="theme-toggle" class="theme-btn">🌙</button>
+    <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
 
     <main class="container" style="max-width: 400px; margin-top: 10vh;">
         <h1>Iniciar Sesión</h1>
