Actualización del código de conexión con Apps Script

--- a/inicio.html
+++ b/inicio.html
@@ -29,12 +29,12 @@
                     <p>Registrar un nuevo visitante en el sistema.</p>
                 </a>
                 <a href="#" class="card disabled">
-                    <h2>📊 Consultar</h2>
-                    <p>Buscar, editar y ver todos los registros.</p>
+                    <h2>🗑️ Descartes</h2>
+                    <p>Registrar descartes de equipos.</p>
                 </a>
                 <a href="#" class="card disabled">
-                    <h2>🗑️ Descartes</h2>
-                    <p>Administrar registros descartados (próximamente).</p>
+                    <h2>📊 Consultar</h2>
+                    <p>Buscar, editar y ver todos los registros.</p>
                 </a>
             </div>
         </main>
