Actualización del código de conexión con Apps Script

--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Sistema de Registro</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="manifest" href="manifest.json">
+    <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
@@ -37,7 +37,7 @@
                     <p>Buscar, editar y ver todos los registros.</p>
                 </a>
             </div>
-        </main>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
