--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Visitantes - Oficina</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
@@ -66,6 +65,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
+    <script src="common.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
