--- a/inicio.html
+++ b/inicio.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Sistema de Registro</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
@@ -41,6 +40,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="common.js"></script>
     <script src="inicio.js"></script>
 </body>
 </html>
