--- a/login.html
+++ b/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Registro de Visitantes</title>
     <link rel="stylesheet" href="style.css">
-    <!-- <link rel="manifest" href="manifest.json"> -->
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
@@ -31,22 +30,7 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="common.js"></script>
     <script src="login.js"></script>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const themeToggleBtn = document.getElementById('theme-toggle');
-            if (localStorage.getItem('theme') === 'dark') {
-                document.body.classList.add('dark-mode');
-                themeToggleBtn.textContent = '☀️';
-            }
-            themeToggleBtn.addEventListener('click', () => {
-                document.body.classList.toggle('dark-mode');
-                let theme = document.body.classList.contains('dark-mode') ? 'dark' : 'light';
-                themeToggleBtn.textContent = theme === 'dark' ? '☀️' : '🌙';
-                localStorage.setItem('theme', theme);
-            });
-        });
-    </script>
 </body>
 </html>
