Actualización del código

--- a/login.html
+++ b/login.html
@@ -13,11 +13,12 @@
     </div>
 
     <main id="main-content" class="login-page-main">
+        <h2 class="page-main-title">Sistema de Registro - Soporte Técnico de Informática</h2>
+
         <div class="login-container">
             <div class="login-info">
                 <img src="icon-192.png" alt="Logo de la Aplicación" class="login-logo">
                 <h1>Iniciar Sesión</h1>
-                <p class="login-subtitle">Sistema de Registro - Soporte Técnico de Informática</p>
             </div>
 
             <div class="login-form-wrapper">
