Actualización del código

--- a/inicio.html
+++ b/inicio.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Sistema de Registro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="inicio.css">
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
