Actualización del código

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
     </div>
 
-    <main id="main-content" class="login-page-main">
+    <main class="login-page-main">
         <h2 class="page-main-title">Sistema de Registro - Soporte Técnico de Informática</h2>
 
         <div class="login-container">
