Actualización del código

--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión - Registro de Visitantes</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="login.css">
     <link rel="icon" href="icon-192.png">
@@ -19,6 +20,7 @@
         <div class="login-container">
             <div class="login-info">
                 <img src="icon-192.png" alt="Logo de la Aplicación" class="login-logo">
+                <img src="logo.png" alt="Logo del Sistema de Registro" class="login-logo">
                 <h1>Iniciar Sesión</h1>
             </div>
 
