Actualización del código

--- a/login.html
+++ b/login.html
@@ -39,8 +39,8 @@
                         <label for="password">Contraseña:</label>
                         <input type="password" id="password" required>
                         <div class="form-buttons">
-                            <button type="button" id="back-btn" class="btn-secondary">Atrás</button>
-                            <button type="submit" id="login-btn" class="btn-primary">Acceder</button>
+                            <button type="button" id="back-btn" class="btn-secondary">Regresar</button>
+                            <button type="submit" id="login-btn" class="btn-primary">Ingresar</button>
                         </div>
                     </div>
                 </form>
