Actualización del código

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div>
                         <label for="cedula-captura">1. Tomar foto de la cédula:</label>
                         <input type="file" id="cedula-captura" accept="image/*" capture="environment">
-                        <button id="process-ocr-btn">Procesar Foto</button>
+                        <button id="process-ocr-btn" class="btn-principal">Procesar Foto</button>
                     </div>
                     <pre id="resultado"></pre>
                 </div>
@@ -44,7 +44,7 @@
                     <input type="text" id="cedula" placeholder="Ej: 8-123-456" required>
                     <label for="motivo">Motivo de visita:</label>
                     <input type="text" id="motivo" required>
-                    <button type="submit" id="submit-btn">Registrar</button>
+                    <button type="submit" id="submit-btn" class="btn-principal">Registrar</button>
                 </form>
             </div>
 
