--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
-    <script src="assets/plugins/qrCode.min.js"></script> 
+    
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
+    
     <script src="common.js"></script>
     <script src="script.js"></script>
 </body>
