Actualización del código

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <label for="qr-captura">1. Tomar foto del QR:</label>
                     <input type="file" id="qr-captura" accept="image/*" capture="environment">
                     <button id="process-qr-btn" class="btn-principal">Procesar Foto del QR</button>
-                    <canvas id="qr-canvas" style="display: none;"></canvas>
+                    <canvas id="qr-canvas" style="max-width: 100%;"></canvas>
                 </div>
 
                 <form id="registro-form" novalidate>
