--- a/login.html
+++ b/login.html
@@ -12,6 +12,11 @@
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
+    <div id="welcome-screen">
+        <img src="logo.png" alt="Logo del Sistema" class="welcome-logo">
+        <h2 class="welcome-title">Sistema de Registro</h2>
+    </div>
+    
     <div class="header-buttons">
         <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
     </div>
