--- a/login.html
+++ b/login.html
@@ -16,12 +16,12 @@
         <img src="logo.png" alt="Logo del Sistema" class="welcome-logo">
         <h2 class="welcome-title">Sistema de Registro</h2>
     </div>
-    
+
     <div class="header-buttons">
         <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
     </div>
 
-    <main class="login-page-main">
+    <main class="login-page-main" id="login-main-content" style="visibility: hidden;">
         <h2 class="page-main-title">Sistema de Registro - Soporte Técnico de Informática</h2>
 
         <div class="login-container">
