--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 <body>
     <div id="welcome-screen">
         <img src="logo.png" alt="Logo del Sistema" class="welcome-logo">
-        <h2 class="welcome-title">Sistema de Registro</h2>
+        <h2 class="welcome-title">Sistema de Registro<br>Soporte Técnico</h2>
     </div>
 
     <div class="header-buttons">
@@ -22,7 +22,7 @@
     </div>
 
     <main class="login-page-main" id="login-main-content" style="visibility: hidden;">
-        <h2 class="page-main-title">Sistema de Registro - Soporte Técnico de Informática</h2>
+        <h2 class="page-main-title">Sistema de Registro - Soporte Técnico</h2>
 
         <div class="login-container">
             <div class="login-info">
