--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
     <link rel="icon" href="icon-192.png">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="nav-container">
+            <a href="inicio.html" class="nav-brand">Registro STI</a>
+
+            <ul class="nav-links" id="nav-menu">
+                <li class="nav-item"><a href="inicio.html" class="nav-link">🏠 Inicio</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">📝 Registrar</a></li>
+                <li class="nav-item"><a href="#" class="nav-link disabled">🗑️ Descartes</a></li>
+                <li class="nav-item"><a href="#" class="nav-link disabled">📊 Consultar</a></li>
+            </ul>
+
+            <button class="hamburger" id="hamburger-btn" aria-label="Abrir menú">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </nav>
+    
     <div id="loader" class="loader-wrapper">
         <div class="loader"></div>
     </div>
