--- a/index.html
+++ b/index.html
@@ -4,36 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Visitantes - Oficina</title>
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="registro.css">
-    <link rel="icon" href="icon-192.png">
+
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/registro.css">
+
+    <link rel="icon" href="assets/icons/icon-192.png">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-container">
-            <a href="inicio.html" class="nav-brand">Registro STI</a>
+    <div id="navbar-placeholder"></div>
 
-            <ul class="nav-links" id="nav-menu">
-                <li class="nav-item"><a href="inicio.html" class="nav-link">🏠 Inicio</a></li>
-                <li class="nav-item"><a href="index.html" class="nav-link">📝 Registrar</a></li>
-                <li class="nav-item"><a href="#" class="nav-link disabled">🗑️ Descartes</a></li>
-                <li class="nav-item"><a href="#" class="nav-link disabled">📊 Consultar</a></li>
-            </ul>
-
-            <button class="hamburger" id="hamburger-btn" aria-label="Abrir menú">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-    </nav>
-    
     <div id="loader" class="loader-wrapper">
         <div class="loader"></div>
     </div>
 
     <div id="header-buttons" class="header-buttons" style="display: none;">
-        <button id="logout-btn" class="header-btn" title="Cerrar Sesión">🚪</button>
+        <button id="logout-btn" class="header-btn" title="Cerrar Sesión">
+            <img src="assets/images/icono-logout-light.png" alt="Cerrar Sesión" class="icon-light">
+            <img src="assets/images/icono-logout-dark.png" alt="Cerrar Sesión" class="icon-dark">
+        </button>
         <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
     </div>
 
@@ -93,7 +81,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     
-    <script src="common.js"></script>
-    <script src="script.js"></script>
+    <script src="js/common.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
