Actualización del código

--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="header-buttons">
-        <button id="theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
+        <button id="login-theme-toggle" class="theme-btn" title="Cambiar Tema">🌙</button>
     </div>
 
     <main class="login-page-main" id="login-main-content" style="visibility: hidden;">
