--- a/inicio.html
+++ b/inicio.html
@@ -27,7 +27,7 @@
                     <h2>📝 Registrar</h2>
                     <p>Registrar un nuevo visitante en el sistema.</p>
                 </a>
-                <a href="#" class="card disabled">
+                <a href="descartes.html" class="card">
                     <h2>🗑️ Descartes</h2>
                     <p>Registrar descartes de equipos.</p>
                 </a>
