--- a/index.html
+++ b/index.html
@@ -68,6 +68,17 @@
         <div id="toast-notification" class="toast">
             <span id="toast-message"></span>
         </div>
+        
+        <div id="modal-confirmacion" class="modal-overlay" style="display: none;">
+            <div class="modal-content">
+                <h2 id="confirm-title">¿Estás seguro?</h2>
+                <p id="confirm-message">Esta acción no se puede deshacer.</p>
+                <div class="modal-buttons">
+                    <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
+                    <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
