--- a/descartes.html
+++ b/descartes.html
@@ -29,6 +29,10 @@
 
             <div id="registro-equipos-section" class="content-center" style="display: none;">
 
+                <h4 class="session-indicator">
+                    Registrando equipos para la Sesión #<span id="active-session-id"></span>
+                </h4>
+
                 <form id="form-equipo" class="form-equipo" novalidate>
                     <h2>Añadir Equipo</h2>
                     <div class="form-grid">
@@ -84,7 +88,7 @@
                                     <th>Modelo</th>
                                     <th>Estado</th>
                                     <th>Motivo</th>
-                                    <th>Acción</th>
+                                    <th>Acciones</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -117,6 +121,49 @@
                 <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
                 <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
             </div>
+        </div>
+    </div>
+
+    <div id="modal-editar-equipo" class="modal-overlay" style="display: none;">
+        <div class="modal-content">
+            <button id="btn-cerrar-modal-editar" class="modal-close-btn">&times;</button>
+            <h2>Editar Equipo</h2>
+            <form id="form-editar-equipo" novalidate>
+                <div class="form-grid">
+                    <div class="form-group">
+                        <label for="edit-descripcion">Descripción:</label>
+                        <input type="text" id="edit-descripcion">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-marbete">Marbete:</label>
+                        <input type="text" id="edit-marbete">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-serie">Serie:</label>
+                        <input type="text" id="edit-serie">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-marca">Marca:</label>
+                        <input type="text" id="edit-marca">
+                    </div>
+                    <div class="form-group">
+                        <label for="edit-modelo">Modelo:</label>
+                        <input type="text" id="edit-modelo">
+                    </div>
+                </div>
+                <div class="form-group-full">
+                    <label for="edit-estado_equipo">Estado del Equipo:</label>
+                    <input type="text" id="edit-estado_equipo">
+                </div>
+                <div class="form-group-full">
+                    <label for="edit-motivo_descarte">Motivo del Descarte:</label>
+                    <input type="text" id="edit-motivo_descarte">
+                </div>
+                <div class="modal-buttons">
+                    <button type="button" id="btn-editar-cancelar" class="btn-secondary">Cancelar</button>
+                    <button type="submit" class="btn-principal">Aplicar Cambios</button>
+                </div>
+            </form>
         </div>
     </div>
 
