--- a/descartes.html
+++ b/descartes.html
@@ -10,7 +10,7 @@
 
     <link rel="icon" href="assets/icons/icon-192.png">
 </head>
-<body>
+<body class="page-descartes-inicio">
     <div id="navbar-placeholder"></div>
 
     <div id="loader" class="loader-wrapper">
