Actualización del código

--- a/descartes.html
+++ b/descartes.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Descartes - Sistema</title>
 
+    <script>
+        // Script para prevenir el "flash" del tema oscuro
+        (function() {
+            try {
+                const theme = localStorage.getItem('theme');
+                if (theme === 'dark') {
+                    document.documentElement.classList.add('dark-mode');
+                }
+            } catch (e) {
+                // No hacer nada si localStorage no está disponible
+            }
+        })();
+    </script>
+
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/descartes.css">
 
