Actualización del código

--- a/inicio.html
+++ b/inicio.html
@@ -42,7 +42,7 @@
                     <p>Registrar un nuevo visitante en el sistema.</p>
                 </a>
                 <a href="descartes.html" class="card">
-                    <h2>🗑️ Descartes</h2>
+                    <h2>🗑️ Descartar</h2>
                     <p>Registrar descartes de equipos.</p>
                 </a>
                 <a href="#" class="card disabled">
