--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iniciar Sesión - Registro de Visitantes</title>
+    <title>Iniciar Sesión - Sistema de Registro</title>
 
     <script>
         // Script para prevenir el "flash" del tema oscuro
