Actualización del código

--- a/descartes.html
+++ b/descartes.html
@@ -122,6 +122,8 @@
             <form id="form-nueva-sesion" novalidate>
                 <label for="unidad_administrativa">Unidad Administrativa:</label>
                 <input type="text" id="unidad_administrativa" required>
+                <label for="siace_code">Código SIACE:</label>
+                <input type="text" id="siace_code" placeholder="Introduce el código de la escuela" required>
                 <button type="submit" class="btn-principal">Crear Sesión</button>
             </form>
         </div>
