Actualización del código

--- a/descartes.html
+++ b/descartes.html
@@ -118,10 +118,9 @@
         <div class="modal-content">
             <button id="btn-cerrar-modal" class="modal-close-btn">&times;</button>
             <h2>Crear Nueva Sesión de Descarte</h2>
-            <p>Introduce el nombre de la escuela o departamento.</p>
             <form id="form-nueva-sesion" novalidate>
                 <label for="unidad_administrativa">Unidad Administrativa:</label>
-                <input type="text" id="unidad_administrativa" required>
+                <input type="text" id="unidad_administrativa" placeholder="Introduce el nombre de la escuela" required>
                 <label for="siace_code">Código SIACE:</label>
                 <input type="text" id="siace_code" placeholder="Introduce el código de la escuela" required>
                 <button type="submit" class="btn-principal">Crear Sesión</button>
