--- a/descartes.html
+++ b/descartes.html
@@ -206,7 +206,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/zxing.min.js"></script>
-    <script src="js/common.js"></script>
-    <script src="js/descartes.js"></script>
+    <script src="js/common.js" defer></script>
+    <script src="js/descartes.js" defer></script>
 </body>
 </html>
