Actualización del código

--- a/descartes.html
+++ b/descartes.html
@@ -205,7 +205,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@zxing/library@0.20.0/umd/zxing.min.js"></script>
+    <script src="https://unpkg.com/@zxing/library@latest"></script>
     <script src="js/common.js" defer></script>
     <script src="js/descartes.js" defer></script>
 </body>
