Actualización del código

--- a/inicio.html
+++ b/inicio.html
@@ -36,6 +36,10 @@
             <h1 id="welcome-message">Bienvenido</h1>
             <p class="subtitle">Selecciona una opción para comenzar.</p>
 
+            <a href="test-scanner.html" style="display: block; text-align: center; margin-bottom: 30px; font-weight: bold; color: #ff9800;">
+                -- 🧪 Acceder al Laboratorio de Pruebas del Escáner --
+            </a>
+
             <div class="dashboard-grid">
                 <a href="index.html" class="card">
                     <h2>📝 Registrar</h2>
