Actualización del código

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <input type="text" id="cedula" placeholder="Ej: 8-123-456" required>
                     <label for="motivo">Motivo de visita:</label>
                     <input type="text" id="motivo" required>
-                    <button type="submit" id="submit-btn" class="btn-principal">Registrar Manualmente</button>
+                    <button type="submit" id="submit-btn" class="btn-principal">Registrar</button>
                 </form>
             </div>
 
