Actualización del código

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 <p><strong>Nombre:</strong> <span id="ultimo-nombre"></span></p>
                 <p><strong>Apellido:</strong> <span id="ultimo-apellido"></span></p>
                 <p><strong>Cédula:</strong> <span id="ultimo-cedula"></span></p>
+                <p><strong>Sexo:</strong> <span id="ultimo-sexo"></span></p>
                 <p><strong>Motivo:</strong> <span id="ultimo-motivo"></span></p>
                 <p><strong>Fecha:</strong> <span id="ultimo-fecha"></span></p>
                 <p><strong>Hora:</strong> <span id="ultimo-hora"></span></p>
