Actualización del código

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <label for="motivo">Motivo de visita:</label>
                     <input type="text" id="motivo" required>
                     
-                    <button type="submit" id="submit-btn" class="btn-principal">Registrar Manualmente</button>
+                    <button type="submit" id="submit-btn" class="btn-principal">Registrar</button>
                 </form>
             </div>
 
