--- a/descartes.html
+++ b/descartes.html
@@ -123,7 +123,7 @@
         </div>
     </main>
 
-    <div id="modal-nueva-sesion" class="modal-overlay" style="display: none;">
+    <div id="modal-nueva-sesion" class="modal-overlay">
         <div class="modal-content">
             <button id="btn-cerrar-modal" class="modal-close-btn">&times;</button>
             <h2>Crear Nueva Sesión de Descarte</h2>
@@ -137,7 +137,7 @@
         </div>
     </div>
 
-    <div id="modal-confirmacion" class="modal-overlay" style="display: none;">
+    <div id="modal-confirmacion" class="modal-overlay">
         <div class="modal-content">
             <h2 id="confirm-title">¿Estás seguro?</h2>
             <p id="confirm-message">Esta acción no se puede deshacer.</p>
@@ -148,7 +148,7 @@
         </div>
     </div>
 
-    <div id="modal-editar-equipo" class="modal-overlay" style="display: none;">
+    <div id="modal-editar-equipo" class="modal-overlay">
         <div class="modal-content">
             <button id="btn-cerrar-modal-editar" class="modal-close-btn">&times;</button>
             <h2>Editar Equipo</h2>
@@ -191,7 +191,7 @@
         </div>
     </div>
     
-    <div id="modal-scanner" class="modal-overlay" style="display: none;">
+    <div id="modal-scanner" class="modal-overlay">
         <div class="modal-content">
             <button id="btn-cerrar-scanner" class="modal-close-btn">&times;</button>
             <h2>Escaneando Código de Barras</h2>
