--- a/index.html
+++ b/index.html
@@ -110,7 +110,16 @@
         </div>
     </main>
 
-    <div id="modal-confirmacion" class="modal-overlay"> </div>
+    <div id="modal-confirmacion" class="modal-overlay">
+    <div class="modal-content">
+        <h2 id="confirm-title">¿Estás seguro?</h2>
+        <p id="confirm-message">Esta acción no se puede deshacer.</p>
+        <div class="modal-buttons">
+            <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
+            <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
+        </div>
+    </div>
+</div>
 
     <div id="modal-registro-qr" class="modal-overlay"> 
         <div class="modal-content">
