Actualización del código

--- a/inicio.html
+++ b/inicio.html
@@ -45,7 +45,7 @@
                     <h2>🗑️ Descartar</h2>
                     <p>Registrar descartes de equipos.</p>
                 </a>
-                <a href="#" class="card disabled">
+                <a href="consultar.html" class="card">
                     <h2>📊 Consultar</h2>
                     <p>Buscar, editar y ver todos los registros.</p>
                 </a>
